--- a/index.html
+++ b/index.html
@@ -2,29 +2,17 @@
 <html lang="en">
   <head>
     <title>Drums Workout</title>
-    <meta charset="utf-8">
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="style.css" rel="stylesheet">
+    <!-- <link href="style.css" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="./script.js" type="module"></script>
+    <link rel="icon" href="/favicon.ico" />
+    <!-- <script src="./script.js" type="module"></script> -->
   </head>  
   <body>
-    <h1>Drums Workout</h1>
-
-    <section>
-      <table class="demo">
-        <tr>
-          <td><label> <b>Duration (minutes)</b><input id="durationInput" value="20" type="number"></label></td>
-          <td><label> <b>Tempo (bpm)</b><input id="tempoInput" value="120" type="number"></label></td>
-        </tr>
-        <tr>
-          <td><button id="btnStart" class="accent">start</button></td>
-          <td><button id="btnStop" disabled="">stop</button></td>
-        </tr>
-      </table>
-    </section>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
