--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
     <!-- <link href="style.css" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="./public/favicon.ico" />
     <!-- <script src="./script.js" type="module"></script> -->
   </head>  
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
   </body>
 </html>
